--- a/src/app/components/registration-page/registration-page.component.css
+++ b/src/app/components/registration-page/registration-page.component.css
@@ -1,3 +1,15 @@
+.custom-radio_single:checked+label::before {
+  background-image: url("../../../assets/img/filter-single-checked.svg");
+}
+
+.custom-radio_single:disabled+label::before {
+  background-image: url("../../../assets/img/filter-single-default.svg");
+}
+
+.custom-radio_single+label::before {
+  background-image: url("../../../assets/img/filter-single-default.svg");
+}
+
 @media screen and (max-width: 5000px) {
   .header-container {
     width: 1578.49px;
@@ -198,18 +210,6 @@
     background-size: 100% 100%;
   }
 
-  .custom-radio_single:checked+label::before {
-    background-image: url("../../../assets/img/filter-single-checked.svg");
-  }
-
-  .custom-radio_single:disabled+label::before {
-    background-image: url("../../../assets/img/filter-single-default.svg");
-  }
-
-  .custom-radio_single+label::before {
-    background-image: url("../../../assets/img/filter-single-default.svg");
-  }
-
   .radio .help {
     font-weight: 300;
     font-size: 20px;
@@ -225,56 +225,30 @@
     margin-top: calc(0.83*27px);
     margin-left: calc(0.75*172px);
     margin-bottom: calc(0.83*34px);
-    border-bottom: 2px solid #e9e9e9;
   }
 
   .header-container a {
-    font-weight: 300;
     font-size: calc(0.75*48px);
     line-height: calc(0.83*56px);
   }
 
   .logo-img1 {
-    position: absolute;
     width: calc(0.75*50px);
     height: calc(0.83*49.74px);
     left: calc(0.75*165px);
     top: calc(0.83*30px);
-
-    background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
-    filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
-    transform: rotate(117.88deg);
-    border-radius: 50%;
-    z-index: -1;
-
-    /* background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
-    filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
-    transform: rotate(117.88deg);
-    border-radius: 50%;
-    opacity: 50%; */
   }
 
   .logo-img2 {
-    position: absolute;
     width: calc(0.75*50px);
     height: calc(0.83*49.74px);
     left: calc(0.75*1032px);
     top: calc(0.83*162px);
-
-    /* background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
-    filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
-    transform: rotate(117.88deg);
-    border-radius: 50%;
-    opacity: 50%; */
   }
 
   .container-registration {
     width: calc(0.75*1246px);
     margin-left: calc(0.75*337px);
-  }
-
-  .container-registration q {
-    font-weight: 300;
   }
 
   .welcome {
@@ -288,11 +262,10 @@
   .registration {
     height: calc(0.83*560px);
     background: rgba(190, 218, 195, 0.7);
-    border-radius: 20px;
   }
 
   .info {
-    font-size: 28px;
+    font-size: calc(0.75*28px);
     line-height: calc(0.83*38px);
     padding-top: calc(0.83*26px);
     padding-left: calc(0.75*59px);
@@ -302,23 +275,18 @@
   .input-field {
     width: calc(0.75*560px);
     height: calc(0.83*70px);
-    border-radius: 20px;
     margin-left: calc(0.75*61px);
-    background: #FBFBF5;
     margin-bottom: calc(0.83*20px);
   }
 
   .input-field input {
     width: calc(0.75*528px);
     height: calc(0.83*67px);
-    font-weight: 300;
     font-size: calc(0.75*15px);
     line-height: calc(0.83*28px);
     padding-left: calc(0.75*28px);
     margin-top: calc(0.83*2px);
     margin-left: calc(0.75*2px);
-    background: #FBFBF5;
-    border-radius: 20px;
   }
 
   .last-field {
@@ -329,32 +297,10 @@
     width: calc(0.75*275px);
     height: calc(0.83*54px);
     margin-top: calc(0.83*40px);
-    background: #E0E0D6;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
-    border-radius: 10px;
     margin-left: calc(0.75*485px);
   }
 
-  .sign-up:hover {
-    background: #EDFAED;
-    border: 1px solid #6A6D79;
-  }
-
-  .sign-up:focus {
-    background: #EDFAED;
-    border: 1px solid #6A6D79;
-  }
-
-  .sign-up:active {
-    background: #8EBD9D;
-    border: 0px;
-  }
-
   .btn-sign-up {
-    width: 100%;
-    height: 100%;
-    color: rgba(27, 31, 59, 0.6);
-    font-weight: 600;
     font-size: calc(0.75*15px);
     line-height: calc(0.83*28px);
   }
@@ -364,21 +310,12 @@
   }
 
   .red-text {
-    display: inline-block;
-    color: red;
     padding-top: calc(0.83*7px);
-  }
-
-  .invalid {}
-
-  .clear {
-    /* opacity: 50%;
-    background-color: #f5f5f2; */
   }
 
   .flex-registration {
     display: flex;
-    gap: 144px;
+    gap: calc(0.75*144px);
   }
 
   .flex-registration .choose-account {
@@ -392,48 +329,19 @@
     margin-bottom: calc(0.83*26px);
   }
 
-  .custom-radio {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
-  }
-
   .custom-radio+label {
-    display: inline-flex;
-    align-items: center;
-    user-select: none;
-    font-weight: 300;
     font-size: calc(0.75*24px);
-    line-height: 177.69%;
+    line-height: calc(0.83*177.69%);
   }
 
   .custom-radio+label::before {
-    content: '';
-    display: inline-block;
     width: calc(0.75*22.6px);
     height: calc(0.83*24px);
     margin-right: calc(0.75*26.4px);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 100% 100%;
-  }
-
-  .custom-radio_single:checked+label::before {
-    background-image: url("../../../assets/img/filter-single-checked.svg");
-  }
-
-  .custom-radio_single:disabled+label::before {
-    background-image: url("../../../assets/img/filter-single-default.svg");
-  }
-
-  .custom-radio_single+label::before {
-    background-image: url("../../../assets/img/filter-single-default.svg");
   }
 
   .radio .help {
-    font-weight: 300;
     font-size: calc(0.75*20px);
-    color: rgba(0, 0, 0, 0.6);
     padding-left: calc(0.75*50px);
   }
 }
@@ -445,11 +353,9 @@
     margin-top: calc(0.71*27px);
     margin-left: calc(0.71*172px);
     margin-bottom: calc(0.71*34px);
-    border-bottom: 2px solid #e9e9e9;
   }
 
   .header-container a {
-    font-weight: 300;
     font-size: calc(0.71*48px);
     line-height: calc(0.71*56px);
   }
@@ -459,41 +365,18 @@
     height: calc(0.71*49.74px);
     left: calc(0.71*165px);
     top: calc(0.71*30px);
-
-    background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
-    filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
-    transform: rotate(117.88deg);
-    border-radius: 50%;
-    z-index: -1;
-
-    /* background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
-      filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
-      transform: rotate(117.88deg);
-      border-radius: 50%;
-      opacity: 50%; */
   }
 
   .logo-img2 {
-    position: absolute;
     width: calc(0.71*50px);
     height: calc(0.71*49.74px);
     left: calc(0.71*1032px);
     top: calc(0.71*162px);
-
-    background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
-    filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
-    transform: rotate(117.88deg);
-    border-radius: 50%;
-    opacity: 50%;
   }
 
   .container-registration {
     width: calc(0.71*1246px);
     margin-left: calc(0.71*337px);
-  }
-
-  .container-registration q {
-    font-weight: 300;
   }
 
   .welcome {
@@ -506,8 +389,6 @@
 
   .registration {
     height: calc(0.71*560px);
-    background: rgba(190, 218, 195, 0.7);
-    border-radius: 20px;
   }
 
   .info {
@@ -521,23 +402,18 @@
   .input-field {
     width: calc(0.71*560px);
     height: calc(0.71*70px);
-    border-radius: 20px;
     margin-left: calc(0.71*61px);
-    background: #FBFBF5;
     margin-bottom: calc(0.71*20px);
   }
 
   .input-field input {
     width: calc(0.71*528px);
     height: calc(0.71*67px);
-    font-weight: 300;
     font-size: calc(0.71*15px);
     line-height: calc(0.71*28px);
     padding-left: calc(0.71*28px);
     margin-top: calc(0.71*2px);
     margin-left: calc(0.71*2px);
-    background: #FBFBF5;
-    border-radius: 20px;
   }
 
   .last-field {
@@ -548,32 +424,10 @@
     width: calc(0.71*275px);
     height: calc(0.71*54px);
     margin-top: calc(0.71*40px);
-    background: #E0E0D6;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
-    border-radius: 10px;
     margin-left: calc(0.71*485px);
   }
 
-  .sign-up:hover {
-    background: #EDFAED;
-    border: 1px solid #6A6D79;
-  }
-
-  .sign-up:focus {
-    background: #EDFAED;
-    border: 1px solid #6A6D79;
-  }
-
-  .sign-up:active {
-    background: #8EBD9D;
-    border: 0px;
-  }
-
   .btn-sign-up {
-    width: 100%;
-    height: 100%;
-    color: rgba(27, 31, 59, 0.6);
-    font-weight: 600;
     font-size: calc(0.71*15px);
     line-height: calc(0.71*28px);
   }
@@ -583,25 +437,16 @@
   }
 
   .red-text {
-    display: inline-block;
-    color: red;
     padding-top: calc(0.71*7px);
-  }
-
-  .invalid {}
-
-  .clear {
-    /* opacity: 50%;
-      background-color: #f5f5f2; */
   }
 
   .flex-registration {
     display: flex;
-    gap: 144px;
+    gap: calc(0.71*144px);
   }
 
   .flex-registration .choose-account {
-    font-size: 28px;
+    font-size: calc(0.71*28px);
     line-height: calc(0.71*38px);
     margin-top: calc(0.71*53px);
     margin-bottom: calc(0.71*22px);
@@ -611,48 +456,19 @@
     margin-bottom: calc(0.71*26px);
   }
 
-  .custom-radio {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
-  }
-
   .custom-radio+label {
-    display: inline-flex;
-    align-items: center;
-    user-select: none;
-    font-weight: 300;
     font-size: calc(0.71*24px);
-    line-height: 177.69%;
+    line-height: calc(0.71*177.69%);
   }
 
   .custom-radio+label::before {
-    content: '';
-    display: inline-block;
     width: calc(0.71*22.6px);
     height: calc(0.71*24px);
     margin-right: calc(0.71*26.4px);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 100% 100%;
-  }
-
-  .custom-radio_single:checked+label::before {
-    background-image: url("../../../assets/img/filter-single-checked.svg");
-  }
-
-  .custom-radio_single:disabled+label::before {
-    background-image: url("../../../assets/img/filter-single-default.svg");
-  }
-
-  .custom-radio_single+label::before {
-    background-image: url("../../../assets/img/filter-single-default.svg");
   }
 
   .radio .help {
-    font-weight: 300;
     font-size: calc(0.71*20px);
-    color: rgba(0, 0, 0, 0.6);
     padding-left: calc(0.71*50px);
   }
 }
