--- a/src/app/components/place-settings/place-settings.component.css
+++ b/src/app/components/place-settings/place-settings.component.css
@@ -23,9 +23,7 @@
   }
 
   .wrapper {
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
+    min-height: calc(100% - 150px);
   }
 
   .content {
