--- a/src/app/components/place-settings/place-settings.component.html
+++ b/src/app/components/place-settings/place-settings.component.html
@@ -36,7 +36,7 @@
 
       <ul class="cards">
         <li class="card-li" *ngFor="let userCoworking of userCoworkings">
-          <div class="card">
+          <div class="card" *ngIf="userCoworking.status == 'На проверке'">
             <div class="first-block__card">
               <p class="card-title">
                 <a [routerLink]="['/main', userCoworking.id]">{{userCoworking.name}}</a>
@@ -51,6 +51,46 @@
               </button>
             </div>
           </div>
+
+          <div class="card denied" *ngIf="userCoworking.status == 'Отказано'">
+            <div class="first-block__card">
+              <p class="card-title">
+                <a [routerLink]="['/main', userCoworking.id]">{{userCoworking.name}}</a>
+              </p>
+              <p class="adress">
+                {{userCoworking.address}}
+              </p>
+            </div>
+            <div class="information-description">
+              <p class="highlighted-text">
+                <span>Ваша заявка на добавление места отклонена</span>
+              </p>
+              <img src="assets/img/denied.svg" alt="denied">
+              <div class="tooltip">
+                <p class="tooltip-text">
+                  Ваша заявка на добавление места отклонена администратором по причине несоответствия указанным
+                  требованиям.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- <div class="card in-progress denied" *ngIf="userCoworking.status == 'На проверке'">
+            <div class="first-block__card">
+              <p class="card-title">
+                <a [routerLink]="['/main', userCoworking.id]">{{userCoworking.name}}</a>
+              </p>
+              <p class="adress">
+                {{userCoworking.address}}
+              </p>
+            </div>
+            <div class="information-description">
+              <p>
+                Ваша заявка на добавление места в обработке
+              </p>
+              <img src="assets/img/clock-icon.svg" alt="denied">
+            </div>
+          </div> -->
         </li>
       </ul>
 
